--- a/src/index.html
+++ b/src/index.html
@@ -430,7 +430,7 @@
 
             <div class="copyright">
                 &copy; by John Lester Powered by
-                <a href="http://food2fork.com" target="_blank" class="link">Food2Fork.com</a>.
+                <a href="#" target="_blank" class="link"><br>Food2Fork API</a>.
             </div>
 
         </div>
